--- a/music/music.html
+++ b/music/music.html
@@ -149,6 +149,7 @@
             width: 100%;
             background-image: url("./cryout.jpg");
             background-size: cover;
+            background-position: center;
             z-index: -2;
         }
 
