--- a/music/music.html
+++ b/music/music.html
@@ -70,6 +70,14 @@
             margin: 1em 2em;
         }
 
+        #score {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translate(-50%, 0);
+            margin: 1em 0;
+        }
+
         #panel {
             height: 60%;
             max-height: 250px;
@@ -191,6 +199,7 @@
     <div id="main">
         <div id="timer"></div>
         <div id="effact"></div>
+        <div id="score"></div>
         <div id="panel">
             <div id="left">
                 <div>
@@ -272,6 +281,7 @@
     <script>
         let audio = document.getElementById("audio")
         let data = []
+        let score = {}
         let prepared = false;
         (async () => {
             let blob = await (await fetch("./cryout.mp3")).blob()
@@ -307,6 +317,8 @@
                 document.getElementById("circle" + v).innerHTML = ""
             })
 
+            let missCount = 0
+
             data.forEach(v => {
                 let delta = getTime(v.tick) - time * 1000
                 if (0 < delta && delta < 1500) {
@@ -318,7 +330,18 @@
                     elem.style.opacity = 1 - delta / 1500
                     elem.className = "circle"
                 }
+                if (delta < -1500 && v.click === undefined)
+                    missCount++
             })
+            function or0(x) {
+                return x ? x : 0
+            }
+            document.getElementById("score").innerHTML = 
+                "" + or0(score.Perfect) + " / " +
+                "" + or0(score.Great) + " / " +
+                "" + or0(score.Good) + " / " +
+                "" + or0(score.Bad) + " / " +
+                "" + (or0(score.Miss) + missCount)
         }
         char_list.forEach(v => {
             let elem = document.getElementById(v)
@@ -328,6 +351,8 @@
         let count = 0
         let pressing = {}
         function showFeedback(key, str) {
+            if (score[str]) score[str]++
+            else score[str] = 1
             let elem = document.getElementById("feedback" + key)
             if (elem === null) return
             elem.style.display = "none"
@@ -346,10 +371,17 @@
             count++
             let time = audio.currentTime * 1000
             let minD = -1e9
+            let pos = {}
             data.forEach(e => {
                 let d = getTime(e.tick) - time
-                if (e.pos === key && Math.abs(d) < Math.abs(minD)) minD = d
+                if (e.click === undefined && e.pos === key && Math.abs(d) < Math.abs(minD)) {
+                    minD = d
+                    pos = e
+                }
             });
+            console.log("Delta", minD)
+            if (Math.abs(minD) > 1500) return
+            pos.click = true
             if (Math.abs(minD) < 70) showFeedback(key, "Perfect")
             else if (Math.abs(minD) < 150) showFeedback(key, "Great")
             else if (Math.abs(minD) < 300) showFeedback(key, "Good")
