--- a/music/music.html
+++ b/music/music.html
@@ -76,6 +76,7 @@
             left: 50%;
             transform: translate(-50%, 0);
             margin: 1em 0;
+            font-weight: 900;
         }
 
         #panel {
