--- a/music/music.html
+++ b/music/music.html
@@ -203,6 +203,7 @@
     <div id="bgimg"></div>
     <div id="welcome">
         <h1>打🎶</h1>
+        <p>如果出现异常请使用高版本的 Chrome 或 Firefox 浏览器打开网页</p>
         <div id="intro">
             <div></div>
             <div></div>
